--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,8 @@
                     </li>
                     <li class="shop-item">
                       <a href="./thanhtoan.html" class="shop-link"
-                        >Thủ Tục Thanh Toán</a>
+                        >Thủ Tục Thanh Toán</a
+                      >
                     </li>
                   </ul>
                 </div>
@@ -69,12 +70,6 @@
                     </li>
                     <li class="shop-item">
                       <a href="#" class="shop-link">Liên Hệ</a>
-                    </li>
-                    <li class="shop-item">
-                      <a href="#" class="shop-link">Danh Sách Yêu Thích</a>
-                    </li>
-                    <li class="shop-item">
-                      <a href="#" class="shop-link">Tài Khoản Của Tôi</a>
                     </li>
                   </ul>
                 </div>
@@ -120,36 +115,70 @@
           <td>
             <div><i class="fas fa-location-arrow"></i></div>
             <h3>LOCATION</h3>
-            <p class="address"><b>No: </b>Đường 3/2, Quận Ninh Kiều, TP.Cần Thơ</p></td>
+            <p class="address">
+              <b>No: </b>Đường 3/2, Quận Ninh Kiều, TP.Cần Thơ
+            </p>
+          </td>
           <td>
             <div><i class="fas fa-phone-alt"></i></div>
             <h3>TALK TO US</h3>
-            <p class="number"><b>Toll-Free: </b>0123456789</p></td>
+            <p class="number"><b>Toll-Free: </b>0123456789</p>
+          </td>
         </table>
-        <form id="form_contact" class="contact"onsubmit="return validateLH(this)" action="#" method="post" enctype="application/x-www-form-urlencoded">
+        <form
+          id="form_contact"
+          class="contact"
+          onsubmit="return validateLH(this)"
+          action="#"
+          method="post"
+          enctype="application/x-www-form-urlencoded"
+        >
           <table>
             <tr>
               <td><label for="name">Họ và Tên</label></td>
               <td>
-                <input name="name" id="name" type="text" required placeholder="Vui lòng nhập họ và tên"/>
+                <input
+                  name="name"
+                  id="name"
+                  type="text"
+                  required
+                  placeholder="Vui lòng nhập họ và tên"
+                />
               </td>
             </tr>
             <tr>
               <td><label for="email">Email</label></td>
               <td>
-                <input name="email" id="email" type="text" required placeholder="Vui lòng nhập email liên hệ"/>
+                <input
+                  name="email"
+                  id="email"
+                  type="text"
+                  required
+                  placeholder="Vui lòng nhập email liên hệ"
+                />
               </td>
             </tr>
             <tr>
               <td><label for="sdt">Số điện thoại</label></td>
               <td>
-                <input name="number" id="sdt" type="text" required placeholder="Vui lòng nhập sdt liên hệ"/>
+                <input
+                  name="number"
+                  id="sdt"
+                  type="text"
+                  required
+                  placeholder="Vui lòng nhập sdt liên hệ"
+                />
               </td>
             </tr>
             <tr>
               <td><label for="content">Nội dung</label></td>
               <td>
-                <textarea name="content" id="content" cols="50" rows="10"></textarea>
+                <textarea
+                  name="content"
+                  id="content"
+                  cols="50"
+                  rows="10"
+                ></textarea>
               </td>
             </tr>
             <tr>
@@ -228,13 +257,9 @@
           <div class="footer-bot">
             <div class="footer-bot__left">
               <span
-                >Copyright © <span class="left-span">M&B
-
-                  
-                </span> all rights
+                >Copyright © <span class="left-span">M&B </span> all rights
                 reserved.</span
               >
-
             </div>
             <div class="footer-bot__right">
               <img src="./assets/images/trangchu/footer-contact.png" alt="" />
