--- a/register.html
+++ b/register.html
@@ -60,17 +60,12 @@
               <div class="shop-option-2">
                 <ul class="shop-list">
                   <li class="shop-item">
-                    <a href="#" class="shop-link">Về Chúng Tôi</a>
+                    <a href="./about.html" class="shop-link">Về Chúng Tôi</a>
                   </li>
                   <li class="shop-item">
-                    <a href="#" class="shop-link">Liên Hệ</a>
+                    <a href="./contact.html" class="shop-link">Liên Hệ</a>
                   </li>
-                  <li class="shop-item">
-                    <a href="#" class="shop-link">Danh Sách Yêu Thích</a>
-                  </li>
-                  <li class="shop-item">
-                    <a href="#" class="shop-link">Tài Khoản Của Tôi</a>
-                  </li>
+                 
                 </ul>
               </div>
             </li>
